--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,7 +18,7 @@
             android:text="Prendre une Photo" />
 
         <ImageView
-            android:id="@+id/imageView"
+            android:id="@+id/imgAffichePhoto"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:srcCompat="@mipmap/ic_launcher" />
